# docker-iotivity

./: .travis.yml  Dockerfile  README.md  build.sh  iotivity_export.sh  static.patch
base/: Dockerfile
patch/: 0001-scons-add-missing-header-files-to-install.patch  0002-scons-add-missing-static-library-to-install.patch  0003-scons-add-json-cbor-convert-tool-to-install.patch  0004-scons-disable-unused-module-from-build.patch  0005-scons-disable-boost-related-build.patch
sample/: CMakeLists.txt
sample/json/: oic_svr_db.json
sample/src/: main.c  security.c  security.h
